--- a/Assensment.html
+++ b/Assensment.html
@@ -4,16 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Final Assesment</title>
+    <title>Final Assesment
+
+    </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
-        *{
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: large;
-        }
+        
         nav{
             width: 100%;
             height: 70px;
@@ -44,7 +40,15 @@
             display: flex;
             justify-content: center;
             align-items: center;
-padding: 15px;
+            padding: 15px;
+        }
+        *{
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+            font-family:sans-serif;
+            color:white
+            font-size: large;
         }
         a:hover{
             color: rgb(98, 51, 227);
@@ -70,16 +74,16 @@ padding: 15px;
         }
         #btn{
             width: 150px;
-position:fixed;
-top: 10px;
-right: 0px;
-color: rgb(228, 93, 25);
-padding: 10px;
-box-shadow: 1px 1px 3px gray;
-margin: 10px;
-display: flex;
-justify-content: center;
-align-items: center;
+            position:fixed;
+            top: 10px;
+            right: 0px;
+            color: rgb(228, 93, 25);
+            padding: 10px;
+            box-shadow: 1px 1px 3px gray;
+            margin: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         h1{
             font-size: x-large;
@@ -124,5 +128,11 @@ align-items: center;
         document.getElementById("date").textContent=`${date}`;
         }
     </script>
+    <footer>
+        <h1 id="name"></h1>
+        <h1 id="uro"></h1>
+        <h1 id="col"></h1>
+        <h1 id="date"></h1>
+    </footer>
 </body>
 </html>
