--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </ul>
     </nav>
     <div class="banner">
-        <img src="./Project.png" alt="banner">
+        <img src="./Project.png" alt="image">
     </div>
     <a href="#"><div id="btn">Buy Rogan&nbsp; <i class="fa-solid fa-arrow-right-long"></i></div></a>
     <footer>
