--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             margin: 0;
             box-sizing: border-box;
             font-family:sans-serif;
-            color:white
+            color:white;
             font-size: large;
         }
         a:hover{
