--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         
 </nav>
     <div class="banner">
-        <img src="./PROJECT_IMAGE.png" alt="image">
+        <img src="./ProjectImage.png" alt="image">
     </div>
     <a href="#"><div id="btn">Buy Rogan&nbsp; <i class="fa-solid fa-arrow-right-long"></i></div></a>
     <footer>
