--- a/index.html
+++ b/index.html
@@ -100,10 +100,11 @@
 
         #box {
             position: absolute;
-            top: 80px;
+            top: 70px;
             left: 60px;
-            padding: 3px 20px;
-            height:max-content;
+            padding: 2px 20px;
+            height:50px;
+            width: max-content;
         }
         
     </style>
