--- a/index.html
+++ b/index.html
@@ -100,11 +100,12 @@
 
         #box {
             position: absolute;
-            top: 70px;
+            top: 60px;
             left: 60px;
             padding: 2px 20px;
-            height: 50px;
+            height: 60px;
             width: max-content;
+           border-radius: 10px;
         }
         
     </style>
