--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </ul>
     </nav>
     <div class="banner">
-        <img src="./ProjectImage.png" alt="banner">
+        <img src="./Downloads.png" alt="banner">
         <button id="box"><span style="color: red;">70% Off </span>for first 3 months</button>
     </div>
     <a href="#">
